--- a/package.json
+++ b/package.json
@@ -15,20 +15,29 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@astrosat/react-utils": "^1.0.1",
+    "@astrosat/react-utils": "^1.1.1",
+    "@hookform/resolvers": "^2.9.10",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@tanstack/react-query": "^4.16.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "cross-fetch": "^3.1.5",
     "daisyui": "^2.24.0",
-    "i18next": "^21.9.1",
+    "firebase": "^9.14.0",
+    "i18next": "^22.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.5"
+    "react-error-boundary": "^3.1.4",
+    "react-hook-form": "^7.39.3",
+    "react-i18next": "^12.0.0",
+    "react-router-dom": "^6.4.3",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@astrosat/eslint-config-astrosat": "^1.0.1",
-    "@astrosat/prettier-config": "^1.1.0",
-    "@astrosat/semantic-release-config": "^1.1.0",
+    "@astrosat/eslint-config-astrosat": "^1.1.3",
+    "@astrosat/prettier-config": "^1.1.2",
+    "@astrosat/semantic-release-config": "^1.1.2",
     "@axe-core/react": "^4.4.4",
     "@babel/core": "^7.18.13",
     "@storybook/addon-a11y": "^6.5.12",
@@ -49,8 +58,8 @@
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
     "autoprefixer": "^10.4.8",
-    "babel-loader": "^8.2.5",
-    "cypress": "^10.6.0",
+    "babel-loader": "^9.1.0",
+    "cypress": "^11.0.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -66,7 +75,7 @@
     "eslint-plugin-tailwindcss": "^3.6.0",
     "eslint-plugin-testing-library": "^5.6.0",
     "jsdom": "^20.0.0",
-    "msw": "^0.45.0",
+    "msw": "^0.48.2",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
@@ -75,7 +84,7 @@
     "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
-    "vitest": "^0.22.1"
+    "vitest": "^0.25.2"
   },
   "msw": {
     "workerDirectory": ""
